--- a/productcard.html
+++ b/productcard.html
@@ -26,9 +26,10 @@
        margin: 10px auto ;
    }  
    </style>
-    <title>Document</title>
+    <title>BuyPaintings</title>
 </head>
 <body>
+    <h1>Beautiful paintings for sale</h1>
     <div class="product-card"> 
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQELpMNLXXrKkjTWRz2P8StudVBHZJCHegRjQ&usqp=CAU" class="product-img">
         <p>Landscape Painting</p>
