made changes in index page

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="productcard.html">Product Card</a></li>
+            <li><a href="productcard.html">Landscape Paintings </a></li>
         </ul>
     </nav>
 
     <main>
-        <h2>Explore Our Products</h2>
-        <p>Click below to view details about our products:</p>
-        <a href="productcard.html">View Product Card</a>
+        
+        
+        <a href="productcard.html">View Paintings</a>
     </main>
 
     <footer>
